deployment/01-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      name: todo-backend-pods
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: nawin3399/go-todo-api:v2
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 80
      targetPort: 80
