deployment/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: todo.com
    http:
      paths:
      - path: /tasks
        pathType: Prefix
        backend:
          service:
            name: todo-backend-service
            port:
              number: 80
      - path: /monitor
        pathType: Prefix
        backend:
          service:
            name: todo-backend-service
            port:
              number: 80
